--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
   </head>
   <body>
     <div class="container">
-      <div class="input-box">1234</div>
-      <button class="btn sum">+</button>
-      <button class="btn substract">-</button>
-      <button class="btn multiply">&times;</button>
-      <button class="btn divide">÷</button>
-      <button class="btn equals">=</button>
-      <button class="btn btn-number one">1</button>
-      <button class="btn btn-number two">2</button>
-      <button class="btn btn-number three">3</button>
-      <button class="btn btn-number four">4</button>
-      <button class="btn btn-number five">5</button>
-      <button class="btn btn-number six">6</button>
-      <button class="btn btn-number seven">7</button>
-      <button class="btn btn-number eight">8</button>
-      <button class="btn btn-number nine">9</button>
-      <button class="btn btn-number zero">0</button>
-      <button class="btn period">.</button>
-      <button class="btn clear">AC</button>
+      <div class="calculator">
+        <div class="input-box">1234</div>
+        <button class="btn btn-operator sum">+</button>
+        <button class="btn btn-operator substract">-</button>
+        <button class="btn btn-operator multiply">&times;</button>
+        <button class="btn btn-operator divide">÷</button>
+        <button class="btn equals">=</button>
+        <button class="btn btn-number one">1</button>
+        <button class="btn btn-number two">2</button>
+        <button class="btn btn-number three">3</button>
+        <button class="btn btn-number four">4</button>
+        <button class="btn btn-number five">5</button>
+        <button class="btn btn-number six">6</button>
+        <button class="btn btn-number seven">7</button>
+        <button class="btn btn-number eight">8</button>
+        <button class="btn btn-number nine">9</button>
+        <button class="btn btn-number zero">0</button>
+        <button class="btn period">.</button>
+        <button class="btn clear">AC</button>
+      </div>
     </div>
   </body>
 </html>
