Started working on Javascript

--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="calculator">
-        <div class="input-box">1234</div>
-        <button class="btn btn-operator sum">+</button>
-        <button class="btn btn-operator substract">-</button>
-        <button class="btn btn-operator multiply">&times;</button>
-        <button class="btn btn-operator divide">÷</button>
-        <button class="btn equals">=</button>
-        <button class="btn btn-number one">1</button>
-        <button class="btn btn-number two">2</button>
-        <button class="btn btn-number three">3</button>
-        <button class="btn btn-number four">4</button>
-        <button class="btn btn-number five">5</button>
-        <button class="btn btn-number six">6</button>
-        <button class="btn btn-number seven">7</button>
-        <button class="btn btn-number eight">8</button>
-        <button class="btn btn-number nine">9</button>
-        <button class="btn btn-number zero">0</button>
-        <button class="btn period">.</button>
-        <button class="btn clear">AC</button>
+    <div class="calculator">
+      <div class="display">
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand"></div>
       </div>
+      <button data-operation class="btn btn-operator sum">+</button>
+      <button data-operation class="btn btn-operator substract">-</button>
+      <button data-operation class="btn btn-operator multiply">&times;</button>
+      <button data-operation class="btn btn-operator divide">÷</button>
+      <button data-equals class="btn equals">=</button>
+      <button data-number class="btn btn-number one">1</button>
+      <button data-number class="btn btn-number two">2</button>
+      <button data-number class="btn btn-number three">3</button>
+      <button data-number class="btn btn-number four">4</button>
+      <button data-number class="btn btn-number five">5</button>
+      <button data-number class="btn btn-number six">6</button>
+      <button data-number class="btn btn-number seven">7</button>
+      <button data-number class="btn btn-number eight">8</button>
+      <button data-number class="btn btn-number nine">9</button>
+      <button data-number class="btn btn-number zero">0</button>
+      <button data-number="" class="btn period">.</button>
+      <button data-all-clear class="btn clear">AC</button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
