Finished calculator; small CSS adjustments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <button data-operation class="btn btn-operator sum">+</button>
       <button data-operation class="btn btn-operator substract">-</button>
-      <button data-operation class="btn btn-operator multiply">&times;</button>
+      <button data-operation class="btn btn-operator multiply">*</button>
       <button data-operation class="btn btn-operator divide">÷</button>
       <button data-equals class="btn equals">=</button>
       <button data-number class="btn btn-number one">1</button>
